tests/kyverno-policies/namespace-account/resources.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: user-test
  labels:
    app.kubernetes.io/name: open-ondemand
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-pass
  labels:
    osc.edu/role: paas
    osc.edu/service-account: test
    account: test
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-fail
  labels:
    osc.edu/role: paas
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-fail-account
  labels:
    osc.edu/role: paas
    osc.edu/service-account: test
    account: foo
