tests/kyverno-policies/namespace-account/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: namespace-account
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: namespace-account
    rule: require-account
    resources:
      - user-test
    kind: Namespace
    result: skip
  - policy: namespace-account
    rule: require-account
    resources:
      - test-pass
    kind: Namespace
    result: pass
  - policy: namespace-account
    rule: require-account
    resources:
      - test-fail
    kind: Namespace
    result: fail
  - policy: namespace-account
    rule: valid-account
    resources:
      - user-test
    kind: Namespace
    result: skip
  - policy: namespace-account
    rule: valid-account
    resources:
      - test-pass
    kind: Namespace
    result: pass
  - policy: namespace-account
    rule: valid-account
    resources:
      - test-fail-account
    kind: Namespace
    result: fail
