tests/kyverno-policies/namespace-account/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
policies:
  - name: namespace-account
    rules:
      - name: valid-account
        values:
          userGroupMap.data.user-test: '["test"]'
